--- a/tests/Unni.ToDo.UnitTests/Unni.ToDo.UnitTests.csproj
+++ b/tests/Unni.ToDo.UnitTests/Unni.ToDo.UnitTests.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Unni.ToDo.API\Unni.ToDo.API.csproj" />
+    <ProjectReference Include="..\..\src\Unni.ToDo.API\Unni.ToDo.API.csproj" />
   </ItemGroup>
 
 </Project>
