--- a/tests/Unni.ToDo.UnitTests/Unni.ToDo.UnitTests.csproj
+++ b/tests/Unni.ToDo.UnitTests/Unni.ToDo.UnitTests.csproj
@@ -26,6 +26,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Unni.ToDo.API\Unni.ToDo.API.csproj" />
+    <ProjectReference Include="..\..\src\Unni.ToDo.Core\Unni.ToDo.Core.csproj" />
+    <ProjectReference Include="..\..\src\Unni.ToDo.Infrastructure\Unni.ToDo.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
