--- a/src/Unni.ToDo.Infrastructure/Unni.ToDo.Infrastructure.csproj
+++ b/src/Unni.ToDo.Infrastructure/Unni.ToDo.Infrastructure.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Unni.ToDo.Core\Unni.ToDo.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Db\" />
+  </ItemGroup>
+
 </Project>
