--- a/src/AdminService/Unni.ToDo.AdminAPI/appsettings.json
+++ b/src/AdminService/Unni.ToDo.AdminAPI/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UnniToDoAdminAPIContext": "Data Source=UnniToDoAdminAPIContext-6d0cd6ac-0967-447e-b523-c02bd110c308.db"
+    "UnniToDoAdminAPIContext": "Data Source=UnniToDoAdminAPIContext-6d0cd6ac-0967-447e-b523-c02bd110c308.db",
+    "DefaultConnection": "Data Source=Data\\Db\\admin.db"
   }
 }
