--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,28 @@
 /src/Unni.ToDo.AdminAPI/obj
 /src/Unni.ToDo.AdminAPI/Properties
 /Unni.ToDo.AdminAPI/obj
+/src/AdminService/.vs
+/src/AdminService/Unni.Admin.Application/bin/Debug/net8.0
+/src/AdminService/Unni.Admin.Application/obj
+/src/AdminService/Unni.Admin.Domain/bin/Debug/net8.0
+/src/AdminService/Unni.Admin.Domain/obj
+/src/AdminService/Unni.Admin.Infrastructure/bin/Debug/net8.0
+/src/AdminService/Unni.Admin.Infrastructure/obj
+/src/AdminService/Unni.ToDo.AdminAPI/bin/Debug/net8.0
+/src/AdminService/Unni.ToDo.AdminAPI/obj
+/src/ToDoService/Unni.ToDo.API/bin/Debug/net7.0
+/src/ToDoService/Unni.ToDo.API/obj
+/src/ToDoService/Unni.ToDo.Core/bin/Debug/net7.0
+/src/ToDoService/Unni.ToDo.Core/obj
+/src/ToDoService/Unni.ToDo.Infrastructure/bin/Debug/net7.0
+/src/ToDoService/Unni.ToDo.Infrastructure/obj
+/src/UI/Unni.ToDo.UI/bin/Debug/net8.0
+/src/UI/Unni.ToDo.UI/obj
+/tests/AdminService.Tests/Unni.Admin.FunctionalTests/bin/Debug/net8.0
+/tests/AdminService.Tests/Unni.Admin.FunctionalTests/obj
+/tests/AdminService.Tests/Unni.Admin.UnniTests/bin/Debug/net8.0
+/tests/AdminService.Tests/Unni.Admin.UnniTests/obj
+/tests/ToDoService.Tests/Unni.ToDo.FunctionalTests/bin/Debug/net7.0
+/tests/ToDoService.Tests/Unni.ToDo.FunctionalTests/obj
+/tests/ToDoService.Tests/Unni.ToDo.UnitTests/bin/Debug/net7.0
+/tests/ToDoService.Tests/Unni.ToDo.UnitTests/obj
