--- a/tests/AdminService.Tests/Unni.Admin.FunctionalTests/Unni.Admin.FunctionalTests.csproj
+++ b/tests/AdminService.Tests/Unni.Admin.FunctionalTests/Unni.Admin.FunctionalTests.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\AdminService\Unni.ToDo.AdminAPI\Unni.AdminAPI.csproj" />
+    <ProjectReference Include="..\..\..\src\AdminService\Unni.Admin.WebAPI\Unni.Admin.WebAPI.csproj" />
   </ItemGroup>
 
 </Project>
