--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@
 /src/ToDoService/Unni.ToDo.WebAPI/obj
 /src/ToDoService/Unni.ToDo.WebAPI/obj
 /tests/ToDoService.Tests/Unni.ToDo.UnitTests/obj
+/src/ToDoService/.vs/ProjectEvaluation
