- UI de coupled and removed dependancies - Modified to call both micro-services

--- a/src/ToDoService/Unni.ToDo.WebAPI/Unni.Todo.WebAPI.csproj
+++ b/src/ToDoService/Unni.ToDo.WebAPI/Unni.Todo.WebAPI.csproj
@@ -9,12 +9,20 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0-rc.2.23480.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Unni.Todo.Application\Unni.Todo.Application.csproj" />
     <ProjectReference Include="..\Unni.ToDo.Infrastructure\Unni.Todo.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\db\" />
   </ItemGroup>
 
 </Project>
