--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,5 @@
 /src/TodoUI/.vs/TodoUI/v17
 /src/TodoUI/.vs/TodoUI/FileContentIndex
 /src/TodoUI/Unni.ToDo.UI/obj
+/src/TodoUI/Unni.ToDo.UI/bin/Debug/net8.0
+/src/TodoUI/.vs/TodoUI/config
