--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,18 @@
 /src/TodoUI/Unni.ToDo.UI/bin/Debug/net8.0
 /src/TodoUI/.vs/TodoUI/config
 /src/TodoUI/.vs
+/tests/ToDoService.Tests/Unni.Todo.UnitTests/bin/Debug/net8.0/appsettings.json
+/tests/ToDoService.Tests/Unni.Todo.UnitTests/bin/Debug/net8.0/CoverletSourceRootsMapping_Unni.Todo.UnitTests
+/tests/ToDoService.Tests/Unni.Todo.UnitTests/bin/Debug/net8.0/Unni.Todo.Application.dll
+/tests/ToDoService.Tests/Unni.Todo.UnitTests/bin/Debug/net8.0/Unni.Todo.Application.pdb
+/tests/ToDoService.Tests/Unni.Todo.UnitTests/bin/Debug/net8.0/Unni.Todo.Domain.dll
+/tests/ToDoService.Tests/Unni.Todo.UnitTests/bin/Debug/net8.0/Unni.Todo.Domain.pdb
+/tests/ToDoService.Tests/Unni.Todo.UnitTests/bin/Debug/net8.0/Unni.Todo.Infrastructure.dll
+/tests/ToDoService.Tests/Unni.Todo.UnitTests/bin/Debug/net8.0/Unni.Todo.Infrastructure.pdb
+/tests/ToDoService.Tests/Unni.Todo.UnitTests/bin/Debug/net8.0/Unni.Todo.UnitTests.deps.json
+/tests/ToDoService.Tests/Unni.Todo.UnitTests/bin/Debug/net8.0/Unni.Todo.UnitTests.dll
+/tests/ToDoService.Tests/Unni.Todo.UnitTests/bin/Debug/net8.0/Unni.Todo.UnitTests.pdb
+/tests/ToDoService.Tests/Unni.Todo.UnitTests/bin/Debug/net8.0/Unni.Todo.WebAPI.deps.json
+/tests/ToDoService.Tests/Unni.Todo.UnitTests/bin/Debug/net8.0/Unni.Todo.WebAPI.dll
+/tests/ToDoService.Tests/Unni.Todo.UnitTests/bin/Debug/net8.0/Unni.Todo.WebAPI.exe
+/tests/ToDoService.Tests/Unni.Todo.UnitTests/bin/Debug/net8.0/Unni.Todo.WebAPI.pdb
