--- a/src/AdminService/Dockerfile
+++ b/src/AdminService/Dockerfile
@@ -12,10 +12,10 @@ WORKDIR /src
 RUN dotnet tool install --global dotnet-ef
 ENV PATH="${PATH}:/root/.dotnet/tools"
 
-COPY ["Unni.Admin.WebAPI/Unni.Admin.WebAPI.csproj", "Unni.Admin.WebAPI/"]
-COPY ["Unni.Admin.Application/Unni.Admin.Application.csproj", "Unni.Admin.Application/"]
-COPY ["Unni.Admin.Domain/Unni.Admin.Domain.csproj", "Unni.Admin.Domain/"]
-COPY ["Unni.Admin.Infrastructure/Unni.Admin.Infrastructure.csproj", "Unni.Admin.Infrastructure/"]
+COPY ["src/AdminService/Unni.Admin.WebAPI/Unni.Admin.WebAPI.csproj", "Unni.Admin.WebAPI/"]
+COPY ["src/AdminService/Unni.Admin.Application/Unni.Admin.Application.csproj", "Unni.Admin.Application/"]
+COPY ["src/AdminService/Unni.Admin.Domain/Unni.Admin.Domain.csproj", "Unni.Admin.Domain/"]
+COPY ["src/AdminService/Unni.Admin.Infrastructure/Unni.Admin.Infrastructure.csproj", "Unni.Admin.Infrastructure/"]
 RUN dotnet restore "Unni.Admin.WebAPI/Unni.Admin.WebAPI.csproj"
 COPY . .
 WORKDIR "/src/Unni.Admin.WebAPI"
