--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,7 +23,15 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       -
-        name: Build and push
+        name: Build and push Todo API
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: src/TodoService/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/admin-api:latest
+      -
+        name: Build and push Admin API
         uses: docker/build-push-action@v5
         with:
           context: .
