--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,10 +1,9 @@
 name: Docker Image CI
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  release:
+    types:
+      - created
 
 jobs:
   build:
@@ -23,13 +22,19 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       -
+        name: Get release tag
+        id: get_tag
+        run: echo "RELEASE_TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+      -
         name: Build and push Todo API
         uses: docker/build-push-action@v5
         with:
           context: .
           file: src/ToDoService/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/todo-api:latest
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/todo-api:${{ steps.get_tag.outputs.RELEASE_TAG }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/todo-api:latest
       -
         name: Build and push Admin API
         uses: docker/build-push-action@v5
@@ -37,7 +42,9 @@ jobs:
           context: .
           file: src/AdminService/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/admin-api:latest
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/admin-api:${{ steps.get_tag.outputs.RELEASE_TAG }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/admin-api:latest
 
       -
         name: Build and push Todo UI
@@ -46,4 +53,6 @@ jobs:
           context: .
           file: src/TodoUI/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/todo-ui:latest
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/todo-ui:${{ steps.get_tag.outputs.RELEASE_TAG }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/todo-ui:latest
